# ImageBasedLight

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AlignedBox.h.BFCCBC5E6A2299E9.idx  AmbiVector.h.704C89EB723F5D7A.idx  Amd.h.794BE01EE1BD5637.idx  AngleAxis.h.3077EFAA0CC97A70.idx  Array.h.4153E95DFE82A744.idx  ArrayBase.h.4972BF9BC0A47130.idx  ArrayCwiseBinaryOps.h.EADD314F05546A8D.idx  ArrayCwiseUnaryOps.h.11E62EDE668D7E51.idx  ArrayWrapper.h.EDA6931A94400635.idx  Assign.h.3B39B9A02BF44DF3.idx  AssignEvaluator.h.7900D23A520794E6.idx  AssignmentFunctors.h.0EFA1DDA340E2E6F.idx  BDCSVD.h.592BA47DF7EECEEB.idx  BandMatrix.h.349EEF9417ACD338.idx  BasicPreconditioners.h.316C1AA2CF66E61E.idx  BiCGSTAB.h.96CB91CA362291E4.idx  BinaryFunctors.h.FB8A036D8840F03E.idx  BlasUtil.h.3C8BCBBB7A35FACE.idx  Block.h.98397DE429368FA5.idx  BlockHouseholder.h.70CBD847B482D453.idx  BlockMethods.h.309DCD79EDF2D3F5.idx  BooleanRedux.h.EEC3A352AA72A1A7.idx  Cholesky.934A91CB54A540B0.idx  ColPivHouseholderQR.h.9215D861F6C33256.idx  CommaInitializer.h.C61F0E0A4613BF8C.idx  CommonCwiseBinaryOps.h.CE034A4BCC7EF9DC.idx  CommonCwiseUnaryOps.h.95B7D15004426C20.idx  CompleteOrthogonalDecomposition.h.FAF79699F0F3E8CE.idx  Complex.h.5768C055FB5E29AE.idx  Complex.h.75254751A8B5D505.idx  (+227 more)
data/output/: A0.csv  A1.csv  A2.csv  b0.csv  b1.csv  b2.csv  design-out.hdr  room-out.hdr  room2-out.hdr  room3-out.hdr
src/: .gitignore  a6.cpp  a6.h  corner_detect.cpp  corner_detect.h  filtering.cpp  filtering.h  final_project_main.cpp  floatimage.cpp  hdr.cpp  hdr.h  panoramicTrans.cpp  panoramicTrans.h
(+7 files in other folders)
